# ozon-clone-backend

./: .env.example  .gitignore  123.py  LICENSE  README.md  alembic.ini  main.py  pyproject.toml
app/: __init__.py
app/category/: model.py  repository.py  router.py  schema.py  service.py
app/image/: repository.py  router.py  schema.py  service.py
app/product/: helpers.py  repository.py  router.py  schema.py  service.py
app/subcategory/: helpers.py  repository.py  router.py  schema.py  service.py
app/user/: model.py  repository.py  router.py  schema.py  service.py
core/: config.py
core/base_classes/: base_repository.py
core/database/models/: __init__.py  category.py  image.py  product.py  subcategory.py  user.py
core/db/: session.py
core/enums/: env_enum.py  sort_enum.py
core/exceptions/: server_exception.py
core/helpers/: debug_message_helper.py  filters_helper.py  pagination_helper.py  sort_helper.py
core/imports/: import_routes.py
core/utils/: add_filters.py  add_pagination.py  add_sort.py
docs/: online_store.drawio
migrations/: env.py
migrations/versions/: 2023-06-27_02:43_ac335de4a67e_add_user_model.py  2023-07-04_11:17_84c80f7cdfd7_add_category_model.py  2023-07-15_02:30_ed26ee26ce7b_add_subcategory_model.py  2023-08-01_16:22_c889156bd51e_add_products_model.py  2023-08-04_11:17_8ede5b8c751f_add_images_model.py  2023-08-04_11:19_687d0fbca738_update_categories_model.py  2023-08-19_17:44_3b456ee887a7_set_subcategory_to_category_fk_prop_.py  2023-08-19_17:44_ee2ce0feabbd_add_slug_field_to_category_model.py
scripts/db/: database.sql
(+7 files in other folders)
